# AI_Job_recommender

./: README.md  app.py  pyproject.toml
src/: helper.py  job_api.py  utils.py
